@@ -1,3 +1,12 @@
+2017-02-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/naiveBayesClassifier.cpp: Added examples
+	* man/naiveBayesClassifier.Rd: Ditto
+
+2017-02-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* data/trainSet.RData: Reorganised data as single file
+
 2017-02-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/data.R: Documentation for four included data sets from mlpack
